2014-11-12  Per Bothner  <per@bothner.com>

	* SetExp.java (compile): Check that decl.field is non-null.
	This can happen in some error situations.

2014-11-06  Andrea Bernardini <andrebask@gmail.com>

	* CaseExp.java (print): Fix to avoid a ClassCastException.

2014-11-06  Per Bothner  <per@bothner.com>

	* Language.java (getExtensions): New method, with logic moved
	from AbstractScriptEngineFactory.method.
	(extensions): New field.
	* AbstractScriptEngineFactory.java (getExtensions): Just call
	Language.getExtensions.
	(extensions): Removed field.

2014-11-02  Per Bothner  <per@bothner.com>

	* Compilation.java (demangleName): Demangle initial '$N'.

2014-10-13  Per Bothner  <per@bothner.com>

	Add support for r7rs 'define-library'.
	* Compilation.java (process): Checked lexer is non-null before close.
	Don't write sub-module class if it is empty.
	* ModuleExp.java (HAS_SUB_MODULE): New flag.
	* ModuleManager.java (createWithClassName): New factory method.

	* Compilation.java (getGlobalEnvironment): New method.
	(resolve): Use it.

2014-10-13  Per Bothner  <per@bothner.com>

	* Compilation.java (isPedantic, setPedantic): New methods
	(pedantic): Make field private.
	* Language.java: Use setPedantic.
	* Compilation.java (addClass); Tweak to use getModule.
	* BindingInitializer.java: Likewise.

2014-10-01  Per Bothner  <per@bothner.com>

	* ApplyExp.java (getRawType, setType): Move up to ...
	* Expression.java (getRawType, setType): ... here.
	* QuoteExp.java (setType): Update to call super.

2014-09-23  Per Bothner  <per@bothner.com>

	* Compilation.java (info): Remove field, replace by ...
	(getMinfo): New method - uses the info field in ModuleExp.

	* LambdaExp.java (allocChildMethods): Don't call allocMethod on
	child - instead do it lazily.  This avoids an inconsistency where
	the Code attribute is created lazily, and fixes
	Savannah bug #42382 "Assigned but unused argument".
	(compileAsMethod): Call allocMethod if needed.
